flux/infrastructure/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: longhorn-ingress
    namespace: longhorn
    annotations:
        traefik.ingress.kubernetes.io/router.middlewares: default-allow-local-only@kubernetescrd
        kubernetes.io/ingress.class: traefik
spec:
    rules:
        - host: "longhorn.home"
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: longhorn-svc
                            port:
                                number: 80
                                kind: Service
